[package]
name = "osmpbf-parser"
version = "1.2.0"
description = "parse osm protobuf files and scan for records with explicit file offsets"
edition = "2018"
license = "BSD-3-Clause"
readme = "readme.md"
repository = "https://github.com/peermaps/osmpbf-parser"
homepage = "https://github.com/peermaps/osmpbf-parser"
include = ["src/","readme.md"]

[dependencies]
flate2 = "1.0.20"
quick-protobuf = "0.8.0"
unbounded-interval-tree = "0.2.3"
